includes and ajusts

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 						<ul>
 							<li><a href="#">Sobre a Crashegg</a></li>
 							<li><a href="#">Serviços</a></li>
-							<li><h1><a href="#">Crashegg Creative</a></h1></li>
+							<li class="egg-logo"><h1><a class="icon-logo-header" href="#">Crashegg Creative</a></h1></li>
 							<li><a href="#">Portfólio</a></li>
 							<li><a href="#">Contato</a></li>
 						</ul>
@@ -34,8 +34,8 @@
 						<li>
 							<a href="#">
 								<picture>
-									<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-	 								<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+									<source srcset="img/banner-main-desk.jpg" media="(min-width:770px)">
+	 								<img src="img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações">
 								</picture>
 							</a>
 						</li>
@@ -47,8 +47,8 @@
 						
 						<div class="egg-group-title">
 							<div class="egg-title">
-								<span class="egg-dark">Nossos</span>
-								<span class="egg-dark">Ingredientes</span>
+								<span class="egg-dark">nossos</span>
+								<span class="egg-dark">ingredientes</span>
 							</div>
 							<div class="egg-describle">
 								<p class="egg-dark">Junte vários dos nossos ingredientes e faça do seu negócio uma receita de sucesso.</p>
@@ -58,7 +58,7 @@
 						<div class="egg-group-services">
 							<ul>
 								<li class="egg-web">
-									<a href="#">Web design</a>
+									<a class="icon-service-web" href="#">Web design</a>
 									<div class="egg-drop">
 										<div class="egg-group">
 											<figure>
@@ -80,7 +80,7 @@
 								</li>
 
 								<li class="egg-video">
-									<a href="#">Vídeos e animações</a>
+									<a href="#" class="icon-service-video">Vídeos e animações</a>
 									<div class="egg-drop">
 										<div class="egg-group">
 											<figure>
@@ -102,7 +102,7 @@
 								</li>
 
 								<li class="egg-3d">
-									<a href="#">Design 3D</a>
+									<a href="#" class="icon-service-3d">Design 3D</a>
 									<div class="egg-drop">
 										<div class="egg-group">
 											<figure>
@@ -124,7 +124,7 @@
 								</li>
 
 								<li class="egg-midia-on">
-									<a href="#">Mídia online</a>
+									<a href="#" class="icon-service-midiaon">Mídia online</a>
 									<div class="egg-drop">
 										<div class="egg-group">
 											<figure>
@@ -146,7 +146,7 @@
 								</li>
 
 								<li class="egg-midia-off">
-									<a href="#">Mídia offline</a>
+									<a href="#" class="icon-service-midiaoff">Mídia offline</a>
 									<div class="egg-drop">
 										<div class="egg-group">
 											<figure>
@@ -168,7 +168,7 @@
 								</li>
 
 								<li class="egg-youtube">
-									<a href="#">Youtube</a>
+									<a href="#" class="icon-service-youtube">Youtube</a>
 									<div class="egg-drop">
 										<div class="egg-group">
 											<figure>
