Video, Portfolio and About sections

--- a/src/index.html
+++ b/src/index.html
@@ -197,14 +197,14 @@
 				<div id="egg-video-marketing" class="egg-row egg-bg-gray">
 					<div class="egg-video-image">
 						<picture>
-							<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-							<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
-						</picture>
+							<source srcset="img/banner-video-desk.jpg" media="(min-width:770px)">
+							<img src="img/banner-video-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+						</picture> 
 					</div>
 					<section class="egg-container">
 						<div class="egg-group-video">
 							<div class="egg-group-icon">
-								<span>Iniciar Video</span>
+								<span class="icon-logo-video">Iniciar Video</span>
 							</div>
 							<div class="egg-group-title">
 								<div class="egg-title">
@@ -225,9 +225,6 @@
 								<span class="egg-gray">Veja o que a</span>
 								<span class="egg-gray">Crash anda fritando</span>
 							</div>
-							<div class="egg-describle">
-								<p class="egg-dark">Junte vários dos nossos ingredientes e faça do seu negócio uma receita de sucesso.</p>
-							</div>
 						</div>
 
 						<div class="egg-group-portfolio">
@@ -237,8 +234,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-													<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -253,8 +250,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-													<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -269,8 +266,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-													<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -285,8 +282,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-													<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -301,8 +298,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-													<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -317,24 +314,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-													<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
-												</picture>
-											</div>
-											<figcaption>
-												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores sit totam pariatur praesentium! Maxime maiores quidem quo quas voluptatum qui. Illo sit dolorum fugit odio blanditiis molestias. Assumenda recusandae, cum!</p>
-											</figcaption>
-										</figure>
-									</a>
-								</li>
-
-								<li>
-									<a href="#">
-										<figure>
-											<div class="egg-img">
-												<picture>
-													<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-													<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -355,9 +336,9 @@
 						<div class="egg-left">
 							<div class="egg-group-title">
 								<div class="egg-title">
-									<span class="egg-yellow">Por</span>
-									<span class="egg-gray">dentro</span>
-									<span class="egg-gray">do ovo</span>
+									<span class="egg-dark">Por</span>
+									<span class="egg-dark">dentro</span>
+									<span class="egg-dark">do ovo</span>
 								</div>
 
 								<div class="egg-describle">
@@ -369,8 +350,8 @@
 						<div class="egg-right">
 							<figure>
 								<picture>
-									<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-									<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+									<source srcset="img/quem-somos.png" media="(min-width: 770px)"/>
+									<img src="img/quem-somos.png" alt="Crashegg Criações de videos e animações" />
 								</picture>
 
 								<figcaption>
@@ -382,7 +363,7 @@
 					</section>
 				</div>
 
-				<div id="egg-about" class="egg-row egg-bg-gray">
+				<div id="egg-contact" class="egg-row egg-bg-gray">
 					<section class="egg-container">
 						
 						<div class="egg-group-title">
