--- a/src/index.html
+++ b/src/index.html
@@ -241,8 +241,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
-													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio-enade.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio-enade.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -257,8 +257,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
-													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio-vinheta-celular.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio-vinheta-celular.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -273,8 +273,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
-													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio-partiu-cultura.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio-partiu-cultura.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -289,8 +289,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
-													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio-video-curta-animacao.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio-video-curta-animacao.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
@@ -305,8 +305,8 @@
 										<figure>
 											<div class="egg-img">
 												<picture>
-													<source srcset="img/padrao-portifolio.png" media="(min-width: 770px)"/>
-													<img src="img/padrao-portifolio.png" alt="Crashegg Criações de videos e animações" />
+													<source srcset="img/padrao-portifolio-video-institucional.png" media="(min-width: 770px)"/>
+													<img src="img/padrao-portifolio-video-institucional.png" alt="Crashegg Criações de videos e animações" />
 												</picture>
 											</div>
 											<figcaption>
