main slide and services thumbnails

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,26 @@
 						<li>
 							<a href="#">
 								<picture>
-									<source srcset="img/banner-main-desk.jpg" media="(min-width:770px)">
-	 								<img src="img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações">
+									<source srcset="img/banner-01-desk.jpg" media="(min-width:770px)">
+	 								<img src="img/banner-01-mobile.jpg" alt="Na crashegg é onde as ideias acontecem">
+								</picture>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<picture>
+									<source srcset="img/banner-02-desk.jpg" media="(min-width:770px)">
+	 								<img src="img/banner-02-mobile.jpg" alt="É na crashegg onde nascem os melhores projetos de design e interação">
+								</picture>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<picture>
+									<source srcset="img/banner-03-desk.jpg" media="(min-width:770px)">
+	 								<img src="img/banner-03-mobile.jpg" alt="Sua amrca será preparada com um tempero especial">
 								</picture>
 							</a>
 						</li>
@@ -64,8 +82,8 @@
 											<figure>
 												<div class="egg-img">
 													<picture>
-														<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-						 								<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+														<source srcset="img/servicos-craiacao-de-sites.jpg" media="(min-width: 770px)"/>
+						 								<img src="img/servicos-craiacao-de-sites.jpg" alt="Criação de sites interativos" />
 													</picture>
 												</div>
 												<figcaption>
@@ -92,8 +110,8 @@
 											<figure>
 												<div class="egg-img">
 													<picture>
-														<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-						 								<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+														<source srcset="img/servicos-edicao-de-video.jpg" media="(min-width: 770px)"/>
+						 								<img src="img/servicos-edicao-de-video.jpg" alt="Criação de videos e animações" />
 													</picture>
 												</div>
 												<figcaption>
@@ -120,8 +138,8 @@
 											<figure>
 												<div class="egg-img">
 													<picture>
-														<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-						 								<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+														<source srcset="img/servicos-modelagem-3d.jpg" media="(min-width: 770px)"/>
+						 								<img src="img/servicos-modelagem-3d.jpg" alt="Modelagem 3D e maquete eletrônica" />
 													</picture>
 												</div>
 												<figcaption>
@@ -146,8 +164,8 @@
 											<figure>
 												<div class="egg-img">
 													<picture>
-														<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-						 								<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+														<source srcset="img/servicos-material-promocional.jpg" media="(min-width: 770px)"/>
+						 								<img src="img/servicos-material-promocional.jpg" alt="Materiais gráficos e digitais" />
 													</picture>
 												</div>
 												<figcaption>
@@ -175,8 +193,8 @@
 											<figure>
 												<div class="egg-img">
 													<picture>
-														<source srcset="/img/banner-main-desk.jpg" media="(min-width: 770px)"/>
-						 								<img src="/img/banner-main-mobile.jpg" alt="Crashegg Criações de videos e animações" />
+														<source srcset="img/servicos-edicao-de-audio.jpg" media="(min-width: 770px)"/>
+						 								<img src="img/servicos-edicao-de-audio.jpg" alt="Edição de áudio digital" />
 													</picture>
 												</div>
 												<figcaption>
@@ -414,7 +432,7 @@
 					</section>
 				</div>
 
-				<div id="egg-about" class="egg-row egg-bg-yellow">
+				<div id="egg-about" class="egg-row egg-bg-light">
 					<section class="egg-container">
 
 						<div class="egg-left wow slideInLeft">
@@ -434,8 +452,8 @@
 						<div class="egg-right wow slideInRight">
 							<figure>
 								<picture>
-									<source srcset="img/quem-somos.png" media="(min-width: 770px)"/>
-									<img src="img/quem-somos.png" alt="Crashegg Criações de videos e animações" />
+									<source srcset="img/quem-somos.jpg" media="(min-width: 770px)"/>
+									<img src="img/quem-somos.jpg" alt="Crashegg Criações de videos e animações" />
 								</picture>
 
 								<figcaption>
@@ -495,6 +513,10 @@
 
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+
+		<!-- build:js js/jquery.bxslider.min.js -->
+		<script src="js/jquery.bxslider.js"></script>
+		<!-- endbuild -->
 		<!-- build:js js/main.min.js -->
 		<script src="js/main.js"></script>
 		<!-- endbuild -->
