--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Crashegg Creative - Criação de videos, animações 3D e sites interativos</title>
+		<title>Crashegg Creative - Criação de vídeos, animações 3D e sites interativos</title>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<!-- build:css css/main.min.css -->
 		<link rel="stylesheet" href="css/main.css">
@@ -10,6 +10,10 @@
 	</head>
 
 	<body>
+		<div id="egg-load">
+			<div class="egg-img-load">
+			</div>
+		</div>
 		<div class="egg-geral">
 
 			<header id="egg-nav" class="egg-row egg-bg-dark">
@@ -18,7 +22,7 @@
 						<ul>
 							<li><a href="#egg-about">Sobre a Crashegg</a></li>
 							<li><a href="#egg-services">Serviços</a></li>
-							<li class="egg-logo"><h1><a class="icon-logo-header" href="#egg-banner-main">Crashegg Creative</a></h1></li>
+							<li class="egg-logo"><h1><a class="icon-logo-header" href="#egg-banner-main">Crashegg Creative - Criação de vídeos, animações 3D e sites interativos</a></h1></li>
 							<li><a href="#egg-porfolio">Portfólio</a></li>
 							<li><a href="#egg-contact">Contato</a></li>
 						</ul>
@@ -1026,7 +1030,7 @@
 						</div>
 
 						<div class="egg-group-contact">
-							<form action="#" method="post">
+							<form action="form/envia.php" method="post">
 								<div class="egg-group-input">
 									<input type="text" name="name" required="required" placeholder="Qual é o seu nome?" />
 									<input type="text" name="company" placeholder="E sua empresa? se chama..."/>
@@ -1063,6 +1067,16 @@
 
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-75652734-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 
 		<!-- build:js js/jquery.bxslider.min.js -->
 		<script src="js/jquery.bxslider.js"></script>
