contact forms and new banners

--- a/src/index.html
+++ b/src/index.html
@@ -53,14 +53,6 @@
 							</a>
 						</li>
 
-						<li>
-							<a href="#">
-								<picture>
-									<source srcset="img/banner-03-desk.jpg" media="(min-width:770px)">
-	 								<img src="img/banner-03-mobile.jpg" alt="Sua marca será preparada com um tempero especial">
-								</picture>
-							</a>
-						</li>
 					</ul>
 				</section>
 
@@ -1030,7 +1022,7 @@
 						</div>
 
 						<div class="egg-group-contact">
-							<form action="form/envia.php" method="post">
+							<form action="/form/envia.php" method="post">
 								<div class="egg-group-input">
 									<input type="text" name="name" required="required" placeholder="Qual é o seu nome?" />
 									<input type="text" name="company" placeholder="E sua empresa? se chama..."/>
@@ -1044,6 +1036,16 @@
 									<input type="submit" value="Fritaaaaaarr!" />
 								</div>
 							</form>
+							<div class="egg-sending">
+								<img src="img/loader.gif" alt="Enviando">
+								<p>Enviando solicitação</p>
+							</div>
+
+							<div class="egg-alert">
+								<span>Sua mensagem foi enviada com sucesso!</span>
+								<p>Em breve, entraremos em contato.</p>
+							</div>
+
 						</div>
 
 					</section>
